--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
   "devDependencies": {
     "@acab/reset.css": "^0.11.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/imagemin-mozjpeg": "^8.0.4",
+    "@types/imagemin-svgo": "^10.0.5",
+    "@types/imagemin-webp": "^7.0.3",
+    "@vheemstra/vite-plugin-imagemin": "^2.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
+    "imagemin-webp": "^8.0.0",
     "sass": "^1.87.0",
     "tailwindcss": "^4.1.4"
   }
