--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# build output
-htdocs/
 
 # generated types
 .astro/
@@ -8,14 +6,23 @@ htdocs/
 node_modules/
 
 # logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# environment variables
-.env
-.env.production
+# E2E test files
+check/*
+!check/check.ts
+!check/check.auto.ts
+!check/design
+check/design/*
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
 
 # macOS-specific files
 .DS_Store
