--- a/package.json
+++ b/package.json
@@ -13,16 +13,36 @@
   },
   "devDependencies": {
     "@acab/reset.css": "^0.11.0",
+    "@axe-core/playwright": "^4.10.1",
+    "@markuplint/astro-parser": "^4.6.19",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/vite": "^4.1.4",
     "@types/imagemin-mozjpeg": "^8.0.4",
     "@types/imagemin-svgo": "^10.0.5",
     "@types/imagemin-webp": "^7.0.3",
+    "@types/jquery": "^3.5.32",
+    "@types/node": "^22.15.3",
+    "@types/sharp": "^0.32.0",
     "@vheemstra/vite-plugin-imagemin": "^2.0.0",
+    "axe-html-reporter": "^2.2.11",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^10.0.0",
     "imagemin-svgo": "^11.0.1",
     "imagemin-webp": "^8.0.0",
+    "jquery": "^3.7.1",
+    "markuplint": "^4.12.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
     "sass": "^1.87.0",
-    "tailwindcss": "^4.1.4"
+    "sharp": "^0.34.1",
+    "stylelint": "^16.9.1",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "tailwindcss": "^4.1.4",
+    "typescript-eslint": "^8.7.0"
   }
 }
