--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@axe-core/playwright": "^4.10.1",
     "@markuplint/astro-parser": "^4.6.19",
     "@playwright/test": "^1.52.0",
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-intersection": "^0.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "@types/imagemin-mozjpeg": "^8.0.4",
     "@types/imagemin-svgo": "^10.0.5",
@@ -36,6 +38,8 @@
     "markuplint": "^4.12.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.87.0",
     "sharp": "^0.34.1",
     "stylelint": "^16.9.1",
