--- a/.env
+++ b/.env
@@ -1,17 +1,25 @@
-#プロジェクトルートディレクトリ（ドメイン直下にディレクトリ作ってそこに公開する場合は記述、それ以外の場合は空でOK）
-VITE_ROOT_PATH = 
+# === ビルド設定 ===
 
-#アセットディレクトリ
-VITE_ASSETS_PATH = _assets
+# ソース圧縮: 'true' または 'false'
+VITE_COMPRESS_OUTPUT=true
 
-#アセットパスを相対パスにする
-VITE_ASSETS_RELATIVE = false
+# CSS分離: 'true' または 'false'
+VITE_CSS_SPLIT=false
 
-#ビルド時にソースを圧縮する
-VITE_BUILD_MINIFY = false
+# 画像の圧縮: 'true' または 'false'
+VITE_IMAGEMIN=true
 
-#ビルド時に画像を圧縮する
-VITE_BUILD_IMAGEMIN = true
+# 画像のWebP変換: 'true' または 'false'
+VITE_CONVERT_TO_WEBP=true
 
-#ビルド時に画像をwebPに変換する
-VITE_BUILD_WEBP = true
+# アセットディレクトリ名（デフォルト: assets）
+VITE_ASSETS_DIR=_assets
+
+# プロジェクトのルートディレクトリ（デフォルト: /）
+# 例: /my-project/ の場合、ドメイン直下のmy-projectディレクトリがルートになる
+VITE_BASE_PATH=/
+
+# 相対パス使用: 'true' または 'false'（デフォルト: false = ルート相対）
+VITE_USE_RELATIVE_PATHS=false
+
+
