--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ VITE_COMPRESS_OUTPUT=true
 VITE_CSS_SPLIT=false
 
 # 画像の圧縮: 'true' または 'false'
-VITE_IMAGEMIN=true
+VITE_IMAGEMIN=false
 
 # 画像のWebP変換: 'true' または 'false'
 VITE_CONVERT_TO_WEBP=true
