--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-astro": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "fast-glob": "^3.3.3",
     "glob": "^11.0.3",
     "globals": "^16.2.0",
     "imagemin": "^9.0.1",
