--- a/.env
+++ b/.env
@@ -22,4 +22,31 @@ VITE_BASE_PATH=/
 # 相対パス使用: 'true' または 'false'（デフォルト: false = ルート相対）
 VITE_USE_RELATIVE_PATHS=false
 
+# === WordPress開発用設定 ===
 
+# テーマ設定
+SITE_NAME=my_site
+VITE_THEME_NAME=my-theme
+
+# テーマファイルマウント用
+THEME_PATH=htdocs/wp/wp-content/themes
+
+# 静的HTML出力先参照(固定ページ自動生成用)
+STATIC_OUTPUT_DIR=htdocs
+
+# WordPress管理者設定
+WORDPRESS_ADMIN_USER=site@admin
+WORDPRESS_ADMIN_PASSWORD=fM4@o0dKceZP
+WORDPRESS_ADMIN_EMAIL=admin@example.com
+
+# データベース設定
+MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=wordpress
+MYSQL_USER=wpuser
+MYSQL_PASSWORD=wppassword
+
+# WordPress設定
+WORDPRESS_DB_HOST=db:3306
+WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_USER=wpuser
+WORDPRESS_DB_PASSWORD=wppassword
