--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "watch": "run-p wp:watch start",
     "lint": "eslint 'src/**/*.{js,ts,astro,json}' --fix",
     "lint:css": "stylelint 'src/**/*.scss' --fix",
     "lint:markup": "markuplint 'htdocs/**/*.{html,php}' --fix --config .markuplintrc",
@@ -14,7 +15,19 @@
     "lint:ci": "run-s lint:js:ci lint:css:ci lint:markup:ci",
     "lint:js:ci": "eslint 'src/**/*.{js,ts,astro,json}' --format json --output-file eslint-report.json",
     "lint:css:ci": "stylelint 'src/**/*.scss' --formatter json > stylelint-report.json",
-    "lint:markup:ci": "markuplint 'htdocs/**/*.{html,php}' -f JSON > markuplint-report.json"
+    "lint:markup:ci": "markuplint 'htdocs/**/*.{html,php}' -f JSON > markuplint-report.json",
+    "// === WordPress開発コマンド ===": "",
+    "setup:new": "echo '🚀 新規WordPress環境を構築します' && npm run wp:up && sleep 15 && npm run wp:init",
+    "setup:restore": "echo '♻️  既存データから環境を復元します' && npm run wp:restore",
+    "// === テンプレート開発コマンド ===": "",
+    "wp:watch": "node plugins/watchTask.js",
+    "// === ユーティリティ ===": "",
+    "wp:up": "docker-compose up -d",
+    "wp:down": "docker-compose down",
+    "wp:init": "docker-compose run --rm wpcli sh /usr/local/bin/setup-wordpress.sh",
+    "wp:restore": "echo '📥 ダンプファイルからデータベースを復元します' && npm run wp:up && sleep 15",
+    "clean": "rm -rf .astro node_modules/.cache htdocs",
+    "destroy": "echo '⚠️  全データ削除します。5秒後に実行...' && sleep 5 && docker-compose down -v --remove-orphans && npm run clean"
   },
   "browserslist": [
     "last 2 version",
@@ -38,6 +51,8 @@
     "@typescript-eslint/parser": "^8.34.1",
     "@vheemstra/vite-plugin-imagemin": "^2.0.0",
     "astro-relative-links": "^0.4.2",
+    "browser-sync": "^3.0.3",
+    "chokidar": "^4.0.1",
     "chokidar-cli": "^3.0.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-astro": "^1.0.0",
