--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ pnpm-workspace.yaml
 
 # Astro internal files (outside htdocs)
 astro-internal/
+
+# Playwright
+/playwright-report/
+/playwright/.cache/
+/test-results/
