--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "lint:ci": "run-s lint:js:ci lint:css:ci lint:markup:ci",
     "lint:js:ci": "eslint 'src/**/*.{js,ts,astro,json}' --format json --output-file eslint-report.json",
     "lint:css:ci": "stylelint 'src/**/*.scss' --formatter json > stylelint-report.json",
-    "lint:markup:ci": "markuplint 'htdocs/**/*.{html,php}' -f JSON > markuplint-report.json"
+    "lint:markup:ci": "markuplint 'htdocs/**/*.{html,php}' -f JSON > markuplint-report.json",
+    "test:a11y:setup": "npx playwright install --with-deps",
+    "test:a11y": "playwright test",
+    "test:a11y:ui": "playwright test --ui",
+    "test:a11y:report": "playwright show-report"
   },
   "browserslist": [
     "last 2 version",
     "not dead"
   ],
   "dependencies": {
-    "astro": "^5.10.0"
+    "@axe-core/playwright": "^4.10.2",
+    "@playwright/test": "^1.56.0",
+    "astro": "^5.10.0",
+    "axe-core": "^4.11.0"
   },
   "devDependencies": {
     "@acab/reset.css": "^0.11.0",
