--- a/.github/workflows/pullcheck.yml
+++ b/.github/workflows/pullcheck.yml
@@ -102,3 +102,35 @@ jobs:
   #         name: playwright-report
   #         path: playwright-report/
   #         retention-days: 30
+
+  # Lighthouse CI（デプロイ前のパフォーマンス・アクセシビリティチェック）
+  # Lighthouse:
+  #   name: Lighthouse CI
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     # リポジトリのチェックアウト
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     # 依存関係のインストール
+  #     - name: Install dependencies
+  #       run: npm install
+  #
+  #     # ビルド実行
+  #     - name: Build site
+  #       run: npm run build
+  #
+  #     # Lighthouse CI実行
+  #     - name: Run Lighthouse CI
+  #       run: npm run lighthouse
+  #       env:
+  #         LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+  #
+  #     # Lighthouse結果のアップロード
+  #     - name: Upload Lighthouse results
+  #       if: always()
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: lighthouse-results
+  #         path: .lighthouseci/
+  #         retention-days: 30
