--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "test:a11y:setup": "npx playwright install --with-deps",
     "test:a11y": "playwright test",
     "test:a11y:ui": "playwright test --ui",
-    "test:a11y:report": "playwright show-report"
+    "test:a11y:report": "playwright show-report",
+    "lighthouse": "lhci autorun && npm run lighthouse:open",
+    "lighthouse:collect": "lhci collect",
+    "lighthouse:assert": "lhci assert",
+    "lighthouse:open": "open .lighthouseci/*.html || xdg-open .lighthouseci/*.html || start .lighthouseci/*.html"
   },
   "browserslist": [
     "last 2 version",
@@ -34,6 +38,7 @@
     "@acab/reset.css": "^0.11.0",
     "@astrojs/check": "^0.9.0",
     "@eslint/js": "^9.29.0",
+    "@lhci/cli": "^0.15.1",
     "@markuplint/astro-parser": "^4.6.19",
     "@tailwindcss/vite": "^4.1.10",
     "@types/imagemin-mozjpeg": "^8.0.4",
