--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "// === Linterチェックコマンド ===": "",
     "lint": "eslint 'src/**/*.{js,ts,astro,json}' --fix",
     "lint:css": "stylelint 'src/**/*.scss' --fix",
     "lint:markup": "markuplint 'htdocs/**/*.{html,php}' --fix --config .markuplintrc",
@@ -15,10 +16,12 @@
     "lint:js:ci": "eslint 'src/**/*.{js,ts,astro,json}' --format json --output-file eslint-report.json",
     "lint:css:ci": "stylelint 'src/**/*.scss' --formatter json > stylelint-report.json",
     "lint:markup:ci": "markuplint 'htdocs/**/*.{html,php}' -f JSON > markuplint-report.json",
+    "// === Playwrightチェックコマンド ===": "",
     "test:a11y:setup": "npx playwright install --with-deps",
     "test:a11y": "playwright test",
     "test:a11y:ui": "playwright test --ui",
     "test:a11y:report": "playwright show-report",
+    "// === Lighthouseチェックコマンド ===": "",
     "lighthouse": "lhci autorun && npm run lighthouse:open",
     "lighthouse:collect": "lhci collect",
     "lighthouse:assert": "lhci assert",
