--- a/.github/workflows/pullcheck.yml
+++ b/.github/workflows/pullcheck.yml
@@ -122,7 +122,7 @@ jobs:
 
       # Lighthouse CI実行
       - name: Run Lighthouse CI
-        run: npm run lighthouse
+        run: npm run lighthouse:ci
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
