--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "// === Lighthouseチェックコマンド ===": "",
     "lighthouse:clean": "rm -rf .lighthouseci",
     "lighthouse": "npm run lighthouse:clean && lhci autorun && npm run lighthouse:open",
+    "lighthouse:ci": "npm run lighthouse:clean && lhci autorun",
     "lighthouse:collect": "lhci collect",
     "lighthouse:assert": "lhci assert",
-    "lighthouse:open": "open .lighthouseci/*.html || xdg-open .lighthouseci/*.html || start .lighthouseci/*.html"
+    "lighthouse:open": "open .lighthouseci/*.html 2>/dev/null || xdg-open .lighthouseci/*.html 2>/dev/null || start .lighthouseci/*.html 2>/dev/null || true"
   },
   "browserslist": [
     "last 2 version",
